<resources>
    <string name="app_name">Hatley</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="username">Username</string>
        <string name="password">Password</string>
        <string name="rememberme">Remember Me</string>
        <string name="fingerprint">or using fingerprint to login each once</string>
        <string name="signin">Sign in</string>
        <string name="loginwith">Or Login With</string>
        <string name="createaccount">Create New Account</string>
        <string name="signup">Sign Up</string>
        <string name="email">Email</string>
        <string name="confirmpass">Confirm Password</string>
        <string name="termsdesc">By clicking create an account you agree to our</string>
        <string name="terms">terms</string>
        <string name="confirmthat">and confirm that.</string>
        <string name="createacc">create an account</string>
        <string name="privacy_policy">Privacy Policy</string>
        <string name="termsser">Terms of service</string>
        <string name="finger">Fingerprint</string>
        <string name="loginfing">Login using fingerprint</string>
        <string name="orderdesc">Order Descripition</string>
        <string name="productimg">Product Image</string>
        <string name="deliverytime">Delivery Time</string>
        <string name="copouncode">Copoun Code</string>
        <string name="createorder">create order</string>
    <string name="promocode">Promo Code</string>
    <string name="changepass">change password</string>
        <string name="addphone">Add Your Phone</string>
        <string name="nationalid">Append Your National Id</string>
        <string name="addphoto">Add Your Photo</string>
        <string name="offer_price">offer price</string>
        <string name="offer_time">offer time</string>
        <string name="starinfo">Star Info</string>
        <string name="approveopenchat">Approved and open chat</string>
    <string name="reject">Reject</string>
        <string name="from">from</string>
        <string name="to">to</string>
        <string name="rating">Rating</string>
        <string name="order_info">Order Info</string>
        <string name="before_order">before order</string>
        <string name="expected_arrival_time">Expected Arrival Time</string>
        <string name="expected_price">Expected Price</string>
        <string name="create_offer_to_customer">Create Offer To Customer</string>
        <string name="evaluate_star">Evaluate Star</string>
        <string name="make_a_complaint">Make a Complaint</string>
    <string name="complaint_type">complaint type</string>
        <string name="save">save</string>
        <string name="copy_and_share_your_promo_code">Copy and share your</string>
        <string name="to_your_friend_to_earn_money">to your friend to earn money</string>
        <string name="copy">Copy</string>
        <string name="promo_code_here">promo code here</string>
        <string name="when_adding_the_code">When Adding The Code</string>
        <string name="you_will_enjoy_a">you will enjoy a</string>
        <string name="discount">discount</string>
    <string name="credit">Credit</string>
        <string name="egp">EGP</string>
        <string name="reminder_amount_after_purchasing">Reminder amount after purchasing</string>
        <string name="from_earned">From Earned</string>
        <string name="promoted">Promoted</string>
        <string name="add_new_place">add new place</string>
    <string name="enter_info">Please Enter All Information</string>
        <string name="choose_from_delivery_places">Choose From Delivery Places</string>
        <string name="added_success">Added Sucessfully</string>
        <string name="not_added">Not Added</string>
    <string name="no_data">No data found</string>
    <string name="no_item">no item</string>
    <string name="search">Search</string>
        <string name="recent_locations">Recent Locations</string>
        <string name="no_notifications">No Notifications</string>
        <string name="no_saved_places">No Saved Places</string>
    <string name="facebook_app_id">1773872226252815</string>
    <string name="fb_login_protocol_scheme">fb1773872226252815</string>
    <string name="call_the_client">Call The Client</string>
    <string name="finish_order">Finish Order</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="add_your_phone_number">Add Your Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="change_your_photo">Change Your Photo</string>
    <string name="change_your_id">Add Your National Id</string>
    <string name="component_message">Component Message</string>
    <string name="common_questions">common questions</string>
    <string name="logged_in_successfully">Logged in Successfully...</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="confirm_order_place">Confirm Order Place</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="offers_accepted">Offers Accepted:</string>
    <string name="delivery_time">Delivery time:</string>
    <string name="request_page">Request Page</string>
    <string name="enter_your_message">Enter your Message...</string>
    <string name="price">Price</string>
    <string name="set_bill_amount">Set Bill Amount</string>
    <string name="your_password">Your Password</string>
    <string name="dismiss">Dismiss</string>
    <string name="short_desc">Description is Too Short!</string>
    <string name="write_ur_problem">Please Write Your problem!</string>
    <string name="complaint_added">Complaint Added Successfully</string>
    <string name="types_failed">Types Fetching Failed</string>
    <string name="sorry_cant_complaint">Sorry....You Cant Complaint In this Order.</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="evaluate_client">Evaluate Client</string>
    <string name="ratted_success">Ratted Successfully</string>
    <string name="evaluated">Evaluated</string>
    <string name="enter_price">Please enter price</string>
    <string name="havent_number">This Client Not Having a Number </string>
    <string name="order_finished">Order has Finished Successfully</string>
    <string name="order_finished_already">Order Already Finished</string>
    <string name="order_location">order location</string>
    <string name="no_recent_place">No Recent Places</string>
    <string name="unable_get_current">Unable to get Current Location</string>
    <string name="select_order_place">Select Order Place First</string>
    <string name="you_must_open_gbs">You Must Open GPS To Get Delivery place</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>
    <string name="offer_accepted">Offer Accepted Successfully</string>
    <string name="offer_rejected">Offer Accepted Successfully</string>
    <string name="offer_already_acc">Offer AlReady Accepted</string>
    <string name="code_not_found">Code Not Found</string>
    <string name="expired_code">Expired Code</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="pass_not_match">Password Not Match</string>
    <string name="wrong_current_pass">Current Password Is Wrong</string>
    <string name="user_short">Username id too short!</string>
    <string name="enter_mail">Please enter email</string>
    <string name="pls_co_pass">Please confirm password</string>
    <string name="email_exist">Email or phone already exist</string>
    <string name="ques_1">HOW CAN I CHANGE MY SHIPPING ADDRESS?</string>
    <string name="ans_1">By default, the last used shipping address will be saved into to your Sample Store account. When you are checking out your order, the default shipping address will be displayed and you have the option to amend it if you need to.</string>
    <string name="ques_2">HOW CAN I USE MY REMAINING ACCOUNT CREDITS?</string>
    <string name="ans_2">We are in the process of removing the option to pay for your orders by ‘Account Credits’. If you have remaining credits in your account, it will be used to pay for your next checkout. If there are insufficient credits, the system will direct you automatically to pay the balance via Paypal.</string>
    <string name="ques_3">HOW DO I ACTIVATE MY ACCOUNT?</string>
    <string name="ans_3">The instructions to activate your account will be sent to your email once you have submitted the registration form. If you did not receive this email, your email service provider’s mailing software may be blocking it. You can try checking your junk / spam folder or contact us at help@samplestore.com</string>
    <string name="ques_4">WHY MUST I MAKE PAYMENT IMMEDIATELY AT CHECKOUT?</string>
    <string name="ans_4">Sample ordering is on ‘first-come-first-served’ basis. To ensure that you get your desired samples, it is recommended that you make your payment within 60 minutes of checking out.</string>
    <string name="ques_5">WHAT DO YOU MEAN BY POINTS? HOW DO I EARN IT?</string>
    <string name="ans_5">Because you are important to us, we want to know what you think about the products. As an added value, every time you rate the products you earn points which go straight to your account. 1 point are added to your account for every review that you give. You will need those points in order to redeem the sample products. So keep rating the products to keep earning points!</string>
    <string name="ques_6">HOW MANY FREE SAMPLES CAN I REDEEM?</string>
    <string name="ans_6">Due to the limited quantity, each members account is only entitled to 1 unique free sample. You can check out up to 4 free samples in each checkout.</string>
    <string name="ques_7">WHAT HAPPENS IF THERE IS BEEN A DELIVERY MISHAP TO MY ORDER? (DAMAGED OR LOST DELIVERY)</string>
    <string name="ans_7">We take such matters very seriously and will look into individual cases thoroughly. Any sample that falls under the below categories should not be thrown away before taking photo proof and emailing the photo of the affected sample and your D.O (Delivery Order) to us at help@samplestore.com (if applicable)</string>
    <string name="ques_8">HOW CAN I TRACK MY ORDERS AND PAYMENT?</string>
    <string name="ans_8">After logging into your account, the status of your checkout history can be found under Order History. For orders via registered postage, a tracking number (article tracking number) will be given to you after the receipt given from Singapore Post Limited (SingPost).</string>
    <string name="ques_9">HOW DO I CANCEL MY ORDERS BEFORE I MAKE A PAYMENT?</string>
    <string name="ans_9">After logging into your account, go to your Shopping Cart. Here, you will be able to make payment or cancel your order. Note: We cannot give refunds once payment is verified</string>
    <string name="nothing_show">Sorry There Is Nothing To Show</string>
    <string name="payment">Payment</string>
    <string name="personal_info">Personal Info</string>
    <string name="pls_upload_img">Please upload image</string>
    <string name="promo_code">Promo Code</string>
    <string name="code_already_used">Code Already In Use</string>
    <string name="promo_not_started">Promo Code Still Not Started</string>
    <string name="promo_expired">Promo Code Has Been Expired</string>
    <string name="promo_not_valid">Promo Code Not Valid</string>
    <string name="promo_not_found">Promo Code Not Found</string>
    <string name="your_orders">Your Orders</string>
    <string name="saved_places">Saved Places</string>
    <string name="short_pass">password is too short!</string>
</resources>