<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".Scenarios.SideMenuScenarios.Controllers.Activities.share_earn">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="fitXY"
                android:src="@drawable/shareimg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/copy_and_share_your_promo_code"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/fcolor"
                android:text="@string/promo_code"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/_12ssp"
                android:text="@string/to_your_friend_to_earn_money"/>
            <LinearLayout
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:weightSum="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtshare"
                    android:layout_weight=".75"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/promocode"
                    android:gravity="center"
                    android:background="@drawable/redus3"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_13ssp"

                    />
                <TextView
                    android:id="@+id/txtcopy"
                    android:layout_weight=".25"
                    android:layout_width="0dp"
                    android:background="@drawable/copy"
                    android:text="@string/copy"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>