<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    tools:context=".Scenarios.SideMenuScenarios.Controllers.Activities.promo_code">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/promocode"
        android:textSize="@dimen/_13ssp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="left|center"
        android:paddingLeft="@dimen/_20sdp"
        />
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center"
        android:weightSum="1"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editPromo"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/promo_code_here"
            android:gravity="center"
            android:background="@drawable/redus3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_13ssp"
            />
        <TextView
            android:id="@+id/txtSend"
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:background="@drawable/copy"
            android:text="save"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/linearAddSuccessfully"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_adding_the_code"
            android:textColor="@android:color/black"
            android:paddingLeft="@dimen/_20sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_will_enjoy_a"
                android:textSize="@dimen/_11ssp"
                />
            <TextView
                android:id="@+id/txtDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textColor="@color/fcolor"
                android:textSize="@dimen/_11ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EGP"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textColor="@color/fcolor"
                android:textSize="@dimen/_11ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:layout_marginLeft="@dimen/_3sdp"
                android:textSize="@dimen/_11ssp"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>