<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="12dp"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/add_your_phone_number"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/fcolor"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/your_phone_number"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            android:backgroundTint="#dedfde"
            android:inputType="phone"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/descripition_bg"
            android:hint="Ex: (+20) 0122 225 22600"
            tools:ignore="RtlSymmetry" />


        <Button
            android:id="@+id/phoneSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/save"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/buttonbg"
            android:textColor="@android:color/white"/>


    </LinearLayout>



</androidx.cardview.widget.CardView>
